# rzv_model_evaluation

./: CMakeLists.txt  README.md  package.xml
include/rzv_model_evaluation/: object_detection_model_evaluation.hpp  yolov8_detect_model_evaluation.hpp
src/: object_detection_model_evaluation.cpp  yolov8_detect_model_evaluation.cpp  yolov8_evaluation_runner.cpp
