<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rzv_model_evaluation</name>
  <version>1.0.0</version>
  <description>Running DRP-AI compiled model evaluation on RZ/V2H</description>
  <maintainer email="cong.nguyen.zn@renesas.com">Cong Nguyen</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>rzv_model</depend>
  <depend>rzv_yolov8</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
